--- a/src/main/scala/com/fsdev/scw/PushPage.html
+++ b/src/main/scala/com/fsdev/scw/PushPage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:wicket="https://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=blob_plain;f=wicket-core/src/main/resources/META-INF/wicket-1.5.xsd;hb=master">
 <head>
 <meta charset="utf-8" />
 </head>
 <body>
-	push it
-	<span wicket:id="pushLabel"/>
+	<div>push a number: <span wicket:id="pushNumber"/></div>
+	<div>push a string: <span wicket:id="pushString"/></div>
 </body>
 </html>
