--- a/src/main/scala/com/fsdev/scw/richmodel/FormPage.html
+++ b/src/main/scala/com/fsdev/scw/richmodel/FormPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:wicket="https://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=blob_plain;f=wicket-core/src/main/resources/META-INF/wicket-1.5.xsd;hb=master">
 <head>
 <meta charset="utf-8" />
 </head>
