form switched to ajax

--- a/src/main/scala/com/fsdev/scw/richmodel/FormPanel.html
+++ b/src/main/scala/com/fsdev/scw/richmodel/FormPanel.html
@@ -9,7 +9,7 @@
 		<span wicket:id="feedback" />
 		<br />
 		<form wicket:id="form">
-			<input wicket:id="name" /> <input type="submit" value="go" />
+			<input wicket:id="name" /> <input type="submit" wicket:id="submit" value="go" />
 		</form>
 	</wicket:panel>
 </body>
