--- a/src/main/scala/com/fsdev/scw/MainPage.html
+++ b/src/main/scala/com/fsdev/scw/MainPage.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"	xmlns:wicket="https://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=blob_plain;f=wicket-core/src/main/resources/META-INF/wicket-1.5.xsd;hb=master">
+<html lang="en"
+      xmlns:wicket="https://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=blob_plain;f=wicket-core/src/main/resources/META-INF/wicket-1.5.xsd;hb=master">
 <head>
-<meta charset="utf-8" />
+    <meta charset="utf-8"/>
 </head>
 <body>
-  <div wicket:id="formPanel"/>
-  <br/>
-  <div wicket:id="pushPanel"/>
-  
+
+<span wicket:id="hello"/>
 </body>
 </html>
